# AutoAnime

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.yaml
src/: config.rs  distributor.rs  feeds.rs  fetcher.rs  lib.rs  main.rs  subscriber.rs
src/fetcher/: filter.rs  mod.rs
