[package]
name = "auto_anime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
resend-rs = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rss-for-mikan = { version = "2.0.4-mikan" }
chrono = "0.4.38"
delay_timer = "0.11.6"
futures = "0.3.17"

pikpak-api = { git = "https://github.com/cyc4188/pikpak-api.git" }