[package]
name = "auto_anime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.89"
reqwest = "0.12.7"
resend-rs = "0.9.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rss-for-mikan = { version = "2.0.4-mikan", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
delay_timer = "0.11.6"
futures = "0.3.17"
sled = "0.34.7"
bincode = "1.3.3"

pikpak-api = { git = "https://github.com/cyc4188/pikpak-api.git" }
